<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- home strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="newsfeed_string">NewsFeed</string>
	<string name="wallet_balance_string">Wallet BalanceRedeem your balance</string>
	<string name="ksh_123_00_string">Ksh 123.00</string>
	<string name="my_stats_string">My Stats</string>
	<string name="community__string">recieved by  community350.3k items</string>
	<string name="txt_150k_items_string">150KItems left togo</string>
	<string name="goal_for_2022__string">Goal for 2022500K items</string>
	<string name="text_string"> </string>
	<string name="txt__3__string"> +3%</string>
	<string name="you_have_contirbuted__string">You have contirbuted25items to our yearly goal so far, way to go!                                      </string>
	<string name="txt__14__string"> +14%</string>
	<string name="by_recieving_string">By recieving you have prevented500gwaste from going intolandfills</string>
	<string name="txt_12_30_string">12:30</string>
	<string name="in_total__the_sr__string">In total,  the SR community has recycled over 15 tonnes of waste that would otherwise have ended up in landfills and the ocean.</string>
	<string name="my_coupons_string">My coupons</string>
	<string name="coupons_string">Coupons</string>
	<string name="txt_7_available_3_active_string">7 available   3 active</string>
	<string name="_redeem_5_string">Redeem 5</string>
	<string name="txt_12_30_a_string">12:30</string>
	<string name="machines_near_you_string">Machines near you</string>
	<string name="add_current_location_string">Please add your current location to find an RVM near you.</string>
	<string name="alice_ln_string">Balozi estate, Roysambu, Thika Road.</string>
	<string name="level_7_parking_string">Roasters Inn</string>
	<string name="sandton_city_string">Alozi estate road, off Thika Road,  Nairobi city.</string>
	<string name="txt_0_22km_string">0.22km</string>
	<string name="directions_string">Directions</string>
	<string name="level_4_parking_string">Quickmart jipange parking.</string>
	<string name="cat_sandton_city_string">Near Alozi estate road, off Thika road.</string>
	<string name="txt_0_22km_dog_string">0.22km</string>
	<string name="pooh_directions_string">Directions</string>
	<string name="level_1_parking_string">Garden City Mall front entrance.</string>
	<string name="eat_sandton_city_string">Ngumba lane, off thika road</string>
	<string name="txt_0_22km_oh_string">0.45km</string>
	<string name="txt_directions_ou_string">Directions</string>
	<string name="txt_12_30_ek1_string">12:30</string>
	<string name="products_string">PRODUCTS</string>
	<string name="recyclable_in_rvm_string">Recyclable in RVM</string>
	<string name="brookside_string">Brookside Sweetened Maziwa                    LALA </string>
	<string name="barcode_string">Barcode:                   6161107151782Volume:                    500mlRecyclable:               YesMaterial:                   PlasticManufacturer:          Brookside KenyaTotal Recycled:         348</string>
	<string name="_where_can_i_recycle__string">Where can i recycle?</string>
	<string name="wallet_string">Wallet</string>
	<string name="wallet_balance_ek1_string">Wallet balance</string>
	<string name="kshs_93_00_string">Kshs 93.00</string>
	<string name="_redeem_string">REDEEM</string>
	<string name="redeemable_coupons_string">Redeemable coupons</string>
	<string name="txt_2_string">2</string>
	<string name="_redeem_ek1_string">REDEEM</string>
	<string name="transactions_string">Transactions</string>
	<string name="all_string">All</string>
	<string name="coca_cola_330ml_i_string">Coca cola330ml11 Aug</string>
	<string name="maziwa_lala_500ml_string">Maziwa LALA500ml23 Aug</string>
	<string name="coca_cola_330ml_string">Coca cola330ml11 Aug</string>
	<string name="monster_500ml_11_aug_string">Monster500ml11 Aug</string>
	<string name="keringet_500ml_h_string">Keringet500ml09 Aug</string>
	<string name="keringet_500ml_g_string">Keringet500ml</string>
	<string name="txt__ksh_1_00_f_string">+Ksh 1.00</string>
	<string name="txt__ksh_1_00_e_string">+Ksh 1.00</string>
	<string name="txt__ksh_1_00_d_string">+Ksh 1.00</string>
	<string name="txt__ksh_1_00_c_string">+Ksh 1.00</string>
	<string name="txt__ksh_1_00_b_string">+Ksh 1.00</string>
	<string name="txt__ksh_1_00_a_string">+Ksh 1.00</string>
	<string name="pashibei_string">Pashibei</string>
	<string name="redeem_ek2_string">Redeem</string>
	<string name="balance_kshs_93_00_string">Balancekshs 93.00</string>
	<string name="airtime_string">Airtime</string>
	<string name="activate_string">Activate</string>
	<string name="activate_ek1_string">Activate</string>
	<string name="_activate_e_string">Activate</string>
	<string name="redeem_m_string">Redeem</string>
	<string name="loyalty_card_string">Loyalty card</string>
	<string name="bank_string">Bank</string>
	<string name="activate_r_string">Activate</string>
	<string name="shell_v__string">Shell V+</string>
	<string name="txt_12_30_ek2_string">12:30</string>
	<string name="pashibei_ek1_string">Pashibei</string>
	<string name="investing__string">Investing  has never been this easy..... yes, you can now transfer your recycling funds into yourPashibei account and buy shares, ETFs, andcrypto bundles. Link your sccount and off yougo! Enter your account number beginning with "PASH" in the block below, please ensure youhave activated your account to ensure that we can allocate the funds correctly." " Please note that in order to allocate the funds correctly - the name and details of your SR profile needs to match those of your Pashibei Account.</string>
	<string name="id_number_string">ID Number</string>
	<string name="pash_account_string">PASH Account Number</string>
	<string name="update_string">Update </string>
	<string name="cancel_string">Cancel</string>
	<string name="don_t_have_a_string">Dont have a Pashibei Loyalty Account?</string>
	<string name="get_one_here_string">Get one here</string>
	<string name="txt_12_30_ek3_string">12:30</string>
	<string name="options_string">Options</string>
	<string name="_newsfeed_ek1_string">Newsfeed</string>
	<string name="_location_string">Location</string>
	<string name="_scan_string">Scan</string>
	<string name="_wallet_ek1_string">Wallet</string>
	<string name="password_string">Password</string>
	<string name="rate_us_string">Rate us</string>
	<string name="_log_out_string">Log out</string>
	<string name="txt_12_30_ek4_string">12:30</string>
	<string name="srs_project_string">SRS PROJECT</string>
	<string name="smart_recycle__string">Smart Recycle Solutionsearn while saving our planet</string>
	<string name="log_in_string">LOG IN</string>
	<string name="enter_number_string">Enter number </string>
	<string name="_enter_string">ENTER</string>
</resources>